<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.biglybt</groupId>
	<artifactId>biglybt-parent</artifactId>
	<version>3.4.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>BiglyBT - Parent</name>

	<url>http://www.biglybt.com</url>

	<properties>
		<project.build.sourceEncoding>8859_1</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<swt.version>4.9</swt.version> <!-- build uses libs in uis/libs/*.jar -->
		<junit.jupiter.version>5.4.0</junit.jupiter.version>
	</properties>

	<repositories>
		<repository>
			<id>maven-eclipse-repo-fork</id><!-- a repository for swt 4.9 binaries -->
			<url>https://lislei.github.io/maven-eclipse.github.io/maven</url>
		</repository>
		<!--
		<repository>
			<id>maven-eclipse-repo</id>
			<url>http://maven-eclipse.github.io/maven</url>
		</repository>
		<repository>
			<id>maven-eclipse-repo-dev</id>
			<url>http://maven-eclipse.github.io/dev-releases/maven</url>
		</repository>
		-->
	</repositories>

	<modules>
		<module>core</module>
		<module>uis</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.biglybt</groupId>
				<artifactId>biglybt-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.27.7</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.10.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>mac-swt</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.eclipse.swt</groupId>
					<artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
					<version>${swt.version}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>linux-swt</id>
			<activation>
				<os>
					<family>linux</family>
				</os>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.eclipse.swt</groupId>
					<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
					<version>${swt.version}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>windows-swt</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.eclipse.swt</groupId>
					<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
					<version>${swt.version}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M3</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>3.3.9</version>
									</requireMavenVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.2</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.4</version>
				</plugin>
				<!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<properties>
							<configurationParameters>
								junit.jupiter.execution.parallel.enabled = true
							</configurationParameters>
						</properties>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<scm>
		<connection>scm:git:git@github.com:BiglySoftware/BiglyBT.git</connection>
		<developerConnection>scm:git:git@github.com:BiglySoftware/BiglyBT.git</developerConnection>
		<tag>master</tag>
		<url>https://github.com/BiglySoftware/BiglyBT</url>
	</scm>

	<issueManagement>
		<system>github</system>
		<url>https://github.com/BiglySoftware/BiglyBT</url>
	</issueManagement>
</project>
